--- a/universe/package.json
+++ b/universe/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "formik": "^2.2.9",
     "jest": "^29.5.0",
     "next": "13.3.4",
     "postcss": "8.4.23",
