--- a/universe/package.json
+++ b/universe/package.json
@@ -24,6 +24,7 @@
     "react-icons": "4.8.0",
     "react-select": "^5.7.3",
     "react-svg": "^16.1.15",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "yup": "^1.1.1"
