--- a/universe/package.json
+++ b/universe/package.json
@@ -17,7 +17,9 @@
     "eslint-config-next": "13.3.4",
     "formik": "^2.2.9",
     "jest": "^29.5.0",
+    "js-cookie": "^3.0.5",
     "next": "13.3.4",
+    "nookies": "^2.5.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
