--- a/universe/package.json
+++ b/universe/package.json
@@ -30,5 +30,8 @@
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
     "yup": "^1.1.1"
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.3"
   }
 }
