--- a/universe/package.json
+++ b/universe/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "4.8.0",
+    "react-qr-code": "^2.0.13",
     "react-select": "^5.7.3",
     "react-svg": "^16.1.15",
     "react-toastify": "^9.1.3",
