--- a/universe/package.json
+++ b/universe/package.json
@@ -23,6 +23,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "4.8.0",
     "react-qr-code": "^2.0.13",
     "react-select": "^5.7.3",
@@ -34,6 +35,7 @@
     "yup": "^1.1.1"
   },
   "devDependencies": {
-    "@types/js-cookie": "^3.0.3"
+    "@types/js-cookie": "^3.0.3",
+    "@types/react-google-recaptcha": "^2.1.9"
   }
 }
