--- a/universe/tsconfig.json
+++ b/universe/tsconfig.json
@@ -15,9 +15,11 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-      "universe/*": ["./*"]
+      "universe/*": ["./*"],
+      "@Components/*": ["./Component/*"],
+      "@Pages/*": ["./pages/*"],
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "jest.config.js"],
   "exclude": ["node_modules"]
 }
