--- a/universe/package.json
+++ b/universe/package.json
@@ -6,9 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "coverage": "jest --coverage"
   },
   "dependencies": {
+    "@testing-library/user-event": "^14.5.2",
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
@@ -16,7 +19,6 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "formik": "^2.2.9",
-    "jest": "^29.5.0",
     "js-cookie": "^3.0.5",
     "next": "13.3.4",
     "nookies": "^2.5.2",
@@ -35,7 +37,14 @@
     "yup": "^1.1.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
+    "@types/jest": "^29.5.12",
     "@types/js-cookie": "^3.0.3",
-    "@types/react-google-recaptcha": "^2.1.9"
+    "@types/react-google-recaptcha": "^2.1.9",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.1.4",
+    "ts-node": "^10.9.2"
   }
 }
